--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 html{
-    /* box-sizing: border-box; */
+    box-sizing: border-box;
 
 }
 .link{
@@ -116,6 +116,48 @@ body{
    
     border-radius: 22px;
     background: var(--Light-brown, #C1865A);
+   
+}
+.footer_span{
+    border-radius: 390px / 73px;
+    background: #4C4C4C;
+    display: block;
+    width: 100%;
+    height: 72.933px;
+    top: 35px;
+    position: relative;
+}
+/* ----------------------------------------------------------------------FOOTER------------------------------------------------ */
+.footer {
+    background: var(--Dark-grey, #282827);
+    position: relative;
 
-    
+}
+
+.footer_container {
+    display: flex;
+    column-gap: 12px;
+}
+.footer_text_container {
+}
+.footer_text_main {
+    color: var(--White, #FFFBFA);
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.footer_text {
+    color: var(--White, #FFFBFA);
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.footer_inst_position{
+    display: flex;
+    gap: 8px;
+    align-items: center;
 }
