--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,8 @@
-html{
-    box-sizing: border-box;
+html {
+    margin: -10px;
+    
+ }
 
-}
 .link{
    list-style-type: none;
 }
@@ -120,7 +121,7 @@ body{
 }
 .footer_span{
     border-radius: 390px / 73px;
-    background: #4C4C4C;
+    background: var(--Dark-grey, #282827);
     display: block;
     width: 100%;
     height: 72.933px;
@@ -131,14 +132,24 @@ body{
 .footer {
     background: var(--Dark-grey, #282827);
     position: relative;
+    padding-top: 28px;
+    padding-right: 28px;
+    padding-left: 28px;
 
 }
-
-.footer_container {
+.footer_container_main{
     display: flex;
+    gap: 39px;
+}
+.footer_container {
     column-gap: 12px;
+    display: flow-root;
+    gap: 39px;
 }
 .footer_text_container {
+    margin-bottom: 26px;
+    display: flow-root;
+    
 }
 .footer_text_main {
     color: var(--White, #FFFBFA);
@@ -147,6 +158,7 @@ body{
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    margin-bottom: 12px;
 }
 .footer_text {
     color: var(--White, #FFFBFA);
@@ -155,9 +167,16 @@ body{
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    text-decoration: none;
 }
 .footer_inst_position{
     display: flex;
     gap: 8px;
     align-items: center;
+}
+.logo_footer {
+    margin-left: auto;
+    margin-right: auto;    
+    width: 105px;
+    height: 128px;
 }
