--- a/styles/styles.css
+++ b/styles/styles.css
@@ -132,25 +132,32 @@ body{
 .footer {
     background: var(--Dark-grey, #282827);
     position: relative;
-    padding-top: 28px;
+    /* padding-top: 28px;
     padding-right: 28px;
-    padding-left: 28px;
+    padding-left: 28px; */
 
 }
 .footer_container_main{
     display: flex;
-    gap: 39px;
 }
 .footer_container {
     column-gap: 12px;
     display: flow-root;
-    gap: 39px;
+    margin-left: 28px;
+    margin-right: auto;
+}
+.footer_container_second{
+    display: flow-root;
+    margin-right: 28px;
+    margin-left: auto;
+
 }
 .footer_text_container {
-    margin-bottom: 26px;
     display: flow-root;
+    margin-top: 28px;
     
 }
+
 .footer_text_main {
     color: var(--White, #FFFBFA);
     font-family: Roboto;
@@ -168,6 +175,7 @@ body{
     font-weight: 400;
     line-height: normal;
     text-decoration: none;
+    
 }
 .footer_inst_position{
     display: flex;
