--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,4 @@
 html {
-    margin: -10px;
     
  }
 
@@ -18,6 +17,7 @@ p {
 
 body{
     font-family: 'Roboto', sans-serif;
+    margin: 0;
 
 }
 .container{
