--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,10 @@
 html {
     margin: 0;
  }
-
+main{
+    margin: 0;
+    padding: 0;
+}
 .link {
    list-style-type: none;
 }
@@ -33,7 +36,7 @@ body{
     max-width: 768px;
     min-width: 320px;
     margin: 0 auto;
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
 }
 
 .head {
@@ -71,6 +74,7 @@ body{
     text-align: center;
     padding-top: 120px;
     margin-top: -25px;
+    margin-bottom: 0;
 }
 .title {
     color: var(--White, #FFFBFA);
@@ -192,6 +196,16 @@ body{
     height: 128px;
 }
 /*-------------------------------------------------REVIEWS-------------------------------------------*/
+.footer_span_reviews{
+        border-radius: 390px / 73px;
+        background: var(--Dark-grey, #282827);
+        display: block;
+        width: 100%;
+        height: 72.933px;
+        top: 52px;
+        position: relative;
+
+}
 .section_reviews {
     margin-left: auto;
     margin-right: auto;
@@ -211,11 +225,33 @@ body{
 }
 .reviews_photo{
     
-    border-radius: 0px 0px 18px 18px
-
+    border-radius: 18px;
+    height: 137px;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: block;
 
 }
-
+@media screen and (min-width: 375px) {
+  .reviews_photo{
+    width: 358px;
+    height: 164px;
+  }
+  }
+@media screen and (min-width: 475px) {
+    .reviews_photo{
+        height: 200px;
+        width: 440px;
+    }
+    
+}
+.reviews_text{
+    padding-left: 30px;
+    padding-right: 30px;
+}
 .section_reviews_text {
     color: var(--Dark-grey, #282827);
     font-family: Roboto;
@@ -239,4 +275,27 @@ body{
     font-style: italic;
     font-weight: 400;
     line-height: normal;
+}
+.button_reviews{
+    display: flex;
+    width: 302px;
+    padding: 12px;
+    justify-content: center;
+    align-items: center;
+   
+    border-radius: 22px;
+    background: var(--Light-brown, #C1865A);
+
+    color: var(--White, #FFFBFA);
+    text-align: center;
+    font-family: Roboto;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 32px;
+
 }
