--- a/styles/styles.css
+++ b/styles/styles.css
@@ -411,6 +411,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 5px;
+
 }
 .container_location_box{
     margin-bottom: 32px;
