--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@ main{
     margin: 0;
     padding: 0;
 }
-.link {
+ul {
    list-style-type: none;
 }
 h1,
@@ -30,6 +30,9 @@ body{
     font-family: 'Roboto', sans-serif;
     margin: 0;
 
+}
+body._lock{
+    overflow: hidden;
 }
 .container{
     /* width: 320px; */
@@ -57,7 +60,7 @@ body{
     position: relative;
     
     }
-.symbol_def {
+.menu_icon {
     margin-left: 20px;
     
 }
@@ -101,6 +104,8 @@ body{
     font-weight: 400;
     line-height: normal;
     margin-top: 8px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 .button_container {
     margin-top: 24px;
@@ -462,5 +467,59 @@ iframe{
     top: 36px;
     position: relative;
 
+
+}
+
+.menu_body{
+    position: absolute;
+    top: 0;
+    left:-100%;
+    width: 100%;
+    height: 100%;
+    /* transform: translate(-100%,0px); */
+    /* background-color: rgba(40, 40, 39, 0.40); */
+    transition: all 0.3s ease 0s;
+    overflow: auto;
+
+}
+.menu_body._active{
+    left: 0;
+}
+.modal {
+        
+    width: 294px;
+    height: 100%;
+    background-color:#282827;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+}
+.svg_modal{
+    display: flex;
+}
+.modal_logo{
+    padding-left: 28px;
+
+}
+
+.modal_cross{
+   margin-left: auto;
+   padding-top: 24px;
+   padding-right: 16px;
+}
+.list_burgermenu {
+    gap: 27px;
+    display: grid;
+}
+.text_burgermenu {
+    color: var(--White, #FFFBFA);
+    text-align: center;
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal; 
+    text-align: left;
 
 }
