--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,7 +74,18 @@ body._lock{
 .inst_head {
     margin-right: 20px;
 }
+/*-----------------------------/*--------------------------------------------------------------------------MAIN----------------------------------------------------------------------*/
 /*--------------------------------------------------------------------------MAIN----------------------------------------------------------------------*/
+/*--------------------------------------------------------------------------MAIN----------------------------------------------------------------------*/
+/*--------------------------------------------------------------------------MAIN----------------------------------------------------------------------*/
+/*--------------------------------------------------------------------------MAIN----------------------------------------------------------------------*/
+---------------------------------------------MAIN----------------------------------------------------------------------*/
+/*--------------------------------------------------------------------------MAIN----------------------------------------------------------------------*/
+/*--------------------------------------------------------------------------MAIN----------------------------------------------------------------------*/
+/*--------------------------------------------------------------------------MAIN----------------------------------------------------------------------*/
+/*--------------------------------------------------------------------------MAIN----------------------------------------------------------------------*/
+/*--------------------------------------------------------------------------MAIN----------------------------------------------------------------------*/
+
 .bg_img{
     background-image: url(../images/main_photo.jpg);
     background-repeat: no-repeat;
