--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,7 +44,7 @@ body._lock{
     max-width: 768px;
     min-width: 320px;
     margin: 0 auto;
-    /* outline: 1px solid red; */
+    outline: 1px solid red;
 }
 
 .head {
@@ -62,7 +62,6 @@ body._lock{
     }
 .menu_icon {
     margin-left: 20px;
-    padding-left: 20px;
     
 }
 .img_logo {
@@ -74,16 +73,6 @@ body._lock{
 .inst_head {
     margin-right: 20px;
 }
-/*-----------------------------/*--------------------------------------------------------------------------MAIN----------------------------------------------------------------------*/
-/*--------------------------------------------------------------------------MAIN----------------------------------------------------------------------*/
-/*--------------------------------------------------------------------------MAIN----------------------------------------------------------------------*/
-/*--------------------------------------------------------------------------MAIN----------------------------------------------------------------------*/
-/*--------------------------------------------------------------------------MAIN----------------------------------------------------------------------*/
----------------------------------------------MAIN----------------------------------------------------------------------*/
-/*--------------------------------------------------------------------------MAIN----------------------------------------------------------------------*/
-/*--------------------------------------------------------------------------MAIN----------------------------------------------------------------------*/
-/*--------------------------------------------------------------------------MAIN----------------------------------------------------------------------*/
-/*--------------------------------------------------------------------------MAIN----------------------------------------------------------------------*/
 /*--------------------------------------------------------------------------MAIN----------------------------------------------------------------------*/
 
 .bg_img{
@@ -535,3 +524,114 @@ iframe{
     text-align: left;
 
 }
+/*--------------------------------------------------------MENU-----------------------------------------*/
+.menu_top {
+    /* padding-left: 15px;
+    padding-right: 15px; */
+    padding-top: 20px;
+    min-width: 320px;
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+}
+.menu_box_title {
+    display: flex;
+    align-items: center;
+    min-width: 320px;
+    max-width: 768px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    margin-bottom: 25px;
+}
+.line {
+    background:  #C1865A;
+    width: 100%;
+    height: 1px;
+}
+.menu_title {
+    color: var(--Dark-grey, #282827);
+    text-align: center;
+    font-family: Roboto;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    /* margin-top: 20px;
+    align-items: center;
+    display: flex;
+    align-items: center; */
+
+}
+.footer_span_menu {
+    border-radius: 390px / 73px;
+    background: var(--Dark-grey, #282827);
+    display: block;
+    width: 100%;
+    height: 72.933px;
+    top: 36px;
+    position: relative;
+    max-width: 768px;
+    min-width: 320px;
+    margin-left: auto;
+    margin-right: auto;
+
+
+
+}
+.pacage {
+    border-radius: 22px;
+    border: 2px solid #ECECEC;
+
+    display: flex;
+    width: 290px;
+    align-items: center;
+    margin-bottom: 25px;
+  
+    margin-left: auto;
+    margin-right: auto;
+   
+    
+}
+@media screen and (min-width: 425px) {
+  .pacage{
+    width: 362px;
+  }
+    
+}
+@media screen and (min-width: 550px) {
+    .pacage{
+      width: 500px;
+    }
+ 
+  }
+
+.pacage_text_box { 
+       /* padding: 10px 14px; */
+       padding: 10px 0px 10px 14px;
+
+}
+.pacage_text {
+    color: var(--Dark-grey, #282827);
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-bottom: 10px;   
+
+}
+.pacage_text:nth-last-child(1){
+    margin-bottom: 0;
+}
+.svg_menu_pacage{
+    margin-left: auto;
+    padding: 10px 14px 10px 0px;
+
+   
+}
+
