--- a/styles/styles.css
+++ b/styles/styles.css
@@ -580,6 +580,7 @@ iframe{
     min-width: 320px;
     margin-left: auto;
     margin-right: auto;
+    /* padding-top: 500px; */
 
 
 
@@ -726,7 +727,8 @@ iframe{
 }
 
 .slider_sec {
-    padding-left: 5px;
+    /* padding-left: 5px; */
+    
 }
 .slider_item_second {
     padding-top: 12px;
