--- a/styles/styles.css
+++ b/styles/styles.css
@@ -764,3 +764,23 @@ iframe{
 .supplements_text:nth-child(2){
     margin-bottom: 0;
 }
+.menu_list{
+    padding-left: 15px;
+
+}
+.menu_box {
+    box-sizing: border-box;
+    height: 114px;
+    width: 358px;
+    border-radius: 22px;
+    background: var(--Light-grey, #ECECEC);
+    display: flex;
+    padding: 10px;
+    gap: 12px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 12px;
+    /* outline: 1px solid red; */
+    /* text-align: center; */
+
+}
