--- a/styles/styles.css
+++ b/styles/styles.css
@@ -740,7 +740,7 @@ iframe{
 
     max-width: 236px;
     align-self: stretch;
-
+    
     margin-bottom: 7px;
 
 
@@ -754,10 +754,11 @@ iframe{
 .max_box {
     height: 135px;
 }
+
 .content_dish {
     max-width: 236px;
     max-height: 34px;
-
+    width: 236px;
     color: var(--Dark-grey, #282827);
     font-family: Roboto;
     font-size: 14px;
@@ -766,18 +767,20 @@ iframe{
     line-height: normal;
     text-transform: lowercase;
 
+    /* 
+    overflow: scroll; */
+    text-overflow: ellipsis;
     overflow: hidden;
-    overflow: scroll;
-
+    white-space: nowrap;
     margin-bottom: 14px;
 
 
 }
-@media screen and (min-width: 550px) {
+/* @media screen and (min-width: 550px) {
     .content_dish{
 max-width: none;    }
  
-  }
+  } */
 .price_dish {
     color: var(--Dark-grey, #282827);
     font-family: Roboto;
@@ -850,7 +853,7 @@ max-width: none;    }
     max-height: none;
 
 }
-.menu_box {
+.menu_box{
     box-sizing: border-box;
     height: 114px;
     width: 290px;
