--- a/styles/styles.css
+++ b/styles/styles.css
@@ -941,8 +941,8 @@ max-width: none;    }
     display: flex;
     gap: 12px;
     position: fixed;
-    z-index: 50;
-    top: 623px;
+    z-index: 5;
+    bottom: 60px;
     right: 16px;
 }
 .categories {
