--- a/styles/styles.css
+++ b/styles/styles.css
@@ -178,6 +178,7 @@ body._lock{
     display: flow-root;
     margin-top: 28px;
     width: 145px;
+    height: 64px;
     
 }
 @media screen and (min-width: 375px) {
@@ -1057,6 +1058,120 @@ bottom: 0;
 @media screen and (min-width:375px){
     .nav_list_item{
         width: 342px;
+    }
+    
+}
+/*===========================================POP_UP======================================================*/
+.pop_up_menu {
+   box-sizing: border-box;
+   width: 100%;
+    min-width: 320px;
+    max-width: 768px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 22px 22px 0px 0px;
+    background: var(--Dark-grey, #282827);
+    height: 588px;
+    outline: 1px solid red;
+    /* display: flex; */
+    position: fixed;
+    bottom: -650px;
+    left: 50%;
+    transform: translate(-50%, 0);
+   
+    transition: all 0.3s ease 0s;
+    padding-left: 24px;
+    padding-right: 24px;
+   z-index: 10;
+ 
+}
+.pop_up_menu.active{
+    bottom: 0;
+} 
+
+
+.photo_menu_pop_up {
+    width: 290px;
+    height: 268px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    border-radius: 22px;
+    margin-bottom: 20px;
+
+}
+@media screen and (min-width:375px){
+    .photo_menu_pop_up{
+        width: 342px;
+        height: 314px;
+    }
+    
+}
+.container_text_menu_pop_up {
+  
+    margin-left: auto;
+    margin-right: auto;
+   
+
+}
+.title_dish_pop_up {
+    width: 290px;
+    color: var(--White, #FFFBFA);
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 12px;
+   
+}
+@media screen and (min-width:375px){
+    .title_dish_pop_up{
+        width: 342px;
+    }
+    
+}
+.content_dish_pop_up {
+    overflow: hidden;
+    color: var(--White, #FFFBFA);
+    text-overflow: ellipsis;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    width: 290px;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 16px;
+   
+}
+@media screen and (min-width:375px){
+    .content_dish_pop_up{
+        width: 342px;
+        
+    }
+    
+}
+.price_dish_pop_up {
+    width: 290px;
+    color: var(--White, #FFFBFA);
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-left: auto;
+    margin-right: auto;
+   
+}
+@media screen and (min-width:375px){
+    .price_dish_pop_up{
+        width: 342px;
+        
     }
     
 }
