--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1098,6 +1098,7 @@ bottom: 0;
     display: block;
     border-radius: 22px;
     margin-bottom: 20px;
+    overflow: scroll;
 
 }
 @media screen and (min-width:375px){
