--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1062,9 +1062,9 @@ bottom: 0;
     
 }
 /*===========================================POP_UP======================================================*/
-.pop_up_menu {
-   box-sizing: border-box;
-   width: 100%;
+.pop_up_menu  {
+    box-sizing: border-box;
+    width: 100%;
     min-width: 320px;
     max-width: 768px;
     margin-left: auto;
@@ -1072,8 +1072,8 @@ bottom: 0;
     border-radius: 22px 22px 0px 0px;
     background: var(--Dark-grey, #282827);
     height: 588px;
-    outline: 1px solid red;
-    /* display: flex; */
+    /* outline: 1px solid red; */
+
     position: fixed;
     bottom: -650px;
     left: 50%;
@@ -1082,7 +1082,7 @@ bottom: 0;
     transition: all 0.3s ease 0s;
     padding-left: 24px;
     padding-right: 24px;
-   z-index: 10;
+    z-index: 10;
  
 }
 .pop_up_menu.active{
@@ -1092,7 +1092,7 @@ bottom: 0;
 
 .photo_menu_pop_up {
     width: 290px;
-    height: 268px;
+    height: 290px;
     margin-left: auto;
     margin-right: auto;
     display: block;
@@ -1104,7 +1104,7 @@ bottom: 0;
 @media screen and (min-width:375px){
     .photo_menu_pop_up{
         width: 342px;
-        height: 314px;
+        height: 342px;
     }
     
 }
